changed css to internal

--- a/app/templates/app/registerTeam.html
+++ b/app/templates/app/registerTeam.html
@@ -1,13 +1,10 @@
+{% extends 'app/main.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+{% block title %}
     <title>Register Page</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
-</head>
-<body>
+{% endblock %}
+{% block content %}
     <header>
         <img src="{% static 'images/new-logo.webp' %}" alt="Hackathon Logo">
     </header>
@@ -25,4 +22,4 @@
         <input type="submit" value="Register">
     </form>
 </body>
-</html>
+{% endblock %}
