--- a/app/templates/app/registerUser.html
+++ b/app/templates/app/registerUser.html
@@ -6,7 +6,8 @@
 {% endblock %}
 {% block content %}
     <header>
-        <img src="{% static 'images/new-logo.webp' %}" alt="Hackathon Logo">
+        <h3 style="font-family: 'Rubik', sans-serif;
+        font-family: 'Space Grotesk', sans-serif; color: white; font-weight: bold;">HackSUS</h3>
     </header>
     <form action="" method="post">
         {% csrf_token %}
