--- a/app/templates/app/adminDashboard.html
+++ b/app/templates/app/adminDashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    <title>Mentor Page</title>
+    <title>Admin Page</title>
 {% endblock %}
 {% block content %}
     <header>
@@ -12,30 +12,12 @@
         font-family: 'Space Grotesk', sans-serif; color: white; font-weight: bold;">HackSUS</h3>
         <a href="{% url 'logoutUser' %}">Logout</a>
     </header>
-    <h1 style="text-align: center;">Welcome {{mentor.firstName}}!</h1>
+    <h1 style="text-align: center;">Welcome {{user.username}}!</h1>
     <br>
-    
-    <h2>Judgement Form</h2>
-    <form action="" method="POST" style="display: block;">
-        {% csrf_token %}
-        <label for="">{{form.teamName.label}}</label>        
-        {{form.teamName}}
-        <label for="">{{form.tableNumber.label}}</label>
-        {{form.tableNumber}}
-        <label for="">{{form.criteriaA.label}}</label>
-        {{form.criteriaA}}
-        <label for="">{{form.criteriaB.label}}</label>
-        {{form.criteriaB}}
-        <label for="">{{form.criteriaC.label}}</label>
-        {{form.criteriaC}}
-        <label for="">{{form.criteriaD.label}}</label>
-        {{form.criteriaD}}
-        {{form.errors}}
-        <button class="btn-submit" type="submit">Submit</button>
-    </form>
-    <br>
+    <a href="{% url 'exportData' %}" class="btn-submit">Export Judgements</a>
     <h2 style="display: block; text-align: left; 
     width: fit-content; margin-top: 30px;">Your Judgements</h2>
+    
     <table>
         <thead>
             <th>Round</th>
@@ -61,27 +43,30 @@
     {% for  ticket in acceptedTickets %}
     <div style="color: #0f0;" class="esum cardWrap">
         <div class="card">
-            <h1>{{ ticket.title }}</h1>
-            <div class="title">
-              <h2>{{ ticket.team.name }}</h2>
-              <span>Team Name</span>
-            </div>
-            <div class="venue">
-              <h2>{{ ticket.team.venue }}</h2>
-              <span>Venue</span>
-            </div>
-            <div class="seat">
-              <h2>{{ ticket.id }}</h2>
-              <span>TNO</span>
-            </div>
-            <div class="time">
-              <h2>{{ticket.timeCreated.time}}</h2>
-              <span>time</span>
-            </div>   
-            <div class="number">
-              <h3>{{ ticket.team.tableNumber}}</h3>
-              <span>table</span>
-            </div>
+          <h1>{{ ticket.title }}</h1>
+          <div class="title">
+            <h2>{{ ticket.team.name }}</h2>
+            <span>Team Name</span>
+          </div>
+          <div class="venue">
+            <h2>{{ ticket.team.venue }}</h2>
+            <span>Venue</span>
+          </div>
+          <div class="seat">
+            <h2>{{ ticket.id }}</h2>
+            <span>TNO</span>
+          </div>
+          <div class="time">
+            <h2>{{ticket.timeCreated.time}}</h2>
+            <span>time</span>
+          </div>   
+          <div class="number">
+            <h3>{{ ticket.team.tableNumber}}</h3>
+            <span>table</span>
+          </div>
+          <div class="view">
+            <a href="{% url 'viewTicket' ticket.id %}">VIEW</a>
+          </div>
         </div>
       </div>
         {% endfor %}
