--- a/app/templates/app/viewTicket.html
+++ b/app/templates/app/viewTicket.html
@@ -6,12 +6,15 @@
 {% endblock %}
 {% block content %}
     <header>
-        <img src="{% static 'images/new-logo.webp' %}" alt="Hackathon Logo">
+        <h3 style="font-family: 'Rubik', sans-serif;
+        font-family: 'Space Grotesk', sans-serif; color: white; font-weight: bold;">HackSUS</h3>
         <a class="logout" href="{% url 'logoutUser' %}">Logout</a>
     </header>
     <h2>Ticket Details:</h2>
     <p><strong>Time of Raising Issue:</strong> {{ ticket.timeCreated }}</p>
     <p><strong>Issue Title:</strong> {{ ticket.title }}</p>
+    <p><strong>Issue Description:</strong> {{ ticket.desc }}</p>
+    <p><strong>Platform:</strong> {{ ticket.platform }}</p>
     <p><strong>Team Name:</strong> {{ ticket.team.name }}</p>
     <p><strong>Table Number:</strong> {{ ticket.team.tableNumber }}</p>
     <p><strong>Venue:</strong> {{ ticket.team.venue }}</p>
