--- a/app/templates/app/main.html
+++ b/app/templates/app/main.html
@@ -254,11 +254,11 @@
 
         @media (min-width: 320px) and (max-width: 800px) {
 
-            .esum:before {
+            /* .esum:before {
                 content: counter(esum)".";
                 position: absolute;
                 left: -2em;
-            }
+            } */
             .cardWrap {
                 width: 11em;
                 margin: 1em 3em;
